# rust-reviewer

./: .gitignore  Cargo.toml  README.md  book.toml  fable_review.md
.github/workflows/: deploy-book.yml
crates/reviewer-core/: Cargo.toml
crates/reviewer-core/src/: lib.rs
crates/reviewer-extract/: Cargo.toml
crates/reviewer-extract/src/: main.rs
crates/reviewer-prepare/: Cargo.toml
crates/reviewer-prepare/src/: main.rs
crates/reviewer-run/: Cargo.toml
crates/reviewer-run/src/: concurrency.rs  critic.rs  diff.rs  findings.rs  github.rs  judge.rs  main.rs  render.rs
crates/reviewer-train/: Cargo.toml
crates/reviewer-train/src/: batch.rs  cache.rs  chat.rs  config.rs  delta.rs  generate.rs  main.rs  mixer.rs  model.rs  rope.rs  serve.rs  train.rs
docs/: SUMMARY.md  blog-01-building-an-all-rust-reviewer.md  blog-02-going-parallel.md  blog-03-bringing-up-the-box.md  blog-04-watching-it-learn.md  blog-05-one-box-in-the-diagram.md  blog-06-learn-the-controller.md  blog-07-the-overfit-model-hallucinates-a-link.md  blog-08-the-model-keeps-a-notebook.md  blog-09-one-plus-the-weight.md  blog-10-argmax-ten-of-ten.md  blog-11-the-scary-parts-were-cheap.md  blog-12-eighteen-of-nineteen.md  blog-13-nineteen-for-nineteen.md  blog-14-free-but-not-that-free.md  blog-15-the-reviewer-reviews-itself.md  blog-16-the-fast-path.md  blog-17-you-cant-proofread-your-own-blind-spot.md  blog-18-twenty-six-in-six-out.md  blog-19-the-trainer-that-never-trained.md  capability-matrix.md  crates.md  data-strategy.md  design-score-thresholds.md  dgx-rust-setup.md  harness-plan.md  introduction.md  path-a-stages-4-5-todo.md  sft_qwen36.py  training-log.md  training-path-b.md  training-plan.md
train/: README.md  attn_oracle.py  chat_template_oracle.py  delta_rule_synthetic.py  greedy_oracle.py  layer_oracle.py  mixer_oracle.py  oracle_dump.py  oracle_full_f32.py  requirements.txt  review_prompts_from_diff.py  run_9b.sh  run_full.sh  serve.py  sft.py  sft_qwen36.py  smoke_test.py  step_oracle.py
