[workspace]
resolver = "3"
members = [
    "crates/reviewer-core",
    "crates/reviewer-extract",
    "crates/reviewer-prepare",
    "crates/reviewer-run",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
futures = "0.3"
