[package]
name = "reviewer-prepare"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
reviewer-core = { path = "../reviewer-core" }
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
