[package]
name = "reviewer-train"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
candle-core = "0.11.0"
candle-nn = "0.11.0"
clap.workspace = true
reviewer-core = { path = "../reviewer-core" }
safetensors = "0.8.0"
serde = { workspace = true }
serde_json.workspace = true
tokenizers = "0.23.1"
axum = "0.8"
tokio = { workspace = true }
rand = "0.8"

[features]
# Enable candle's CUDA backend (GPU inference/training). Build with
# `--features cuda`; requires the CUDA toolkit + a compatible GPU.
cuda = ["candle-core/cuda", "candle-nn/cuda"]
